2006-01-28  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: add SourceRefModel, NameEmbedList, 
	AddrEmbedList
	* src/EditPerson.py: Use new EmbedLists
	* src/ViewManager.py: set max value on set_fraction
	* src/edit_person.glade: remove old lists
	* src/GrampsDb/_ReadGedcom.py: fix types
	* src/EditFamily.py: fix variable names
	* src/GrampsDb/_GrampsBSDDB.py: qualify strxfrm

2006-01-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Typo.
	* src/GrampsDb/_GrampsBSDDB.py: Correct duplicate event IDs on upgrade.
	* src/GrampsDb/_WriteXML.py: More XML updates.

	* doc/grampsxml.dtd: Update to reflect new XML.
	* src/GrampsDb/_ReadGedcom.py (parse_repo_ref_caln): Properly set
	media type.
	* src/GrampsDb/_WriteXML.py: More XML updates.
	* doc/grampsxml.rng: Update to reflect new XML.

	* src/GrampsDb/_GrampsBSDDB.py: Typos.
	* src/GrampsDb/_WriteXML.py: Minor corrections.
	* doc/grampsxml.rng: Updates.
	* example/gramps/example.gramps: New XML example.

2006-01-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcomp.py: preselect gramps ids for events

2006-01-26  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: optimization
	* src/DisplayTabs.py: improved docs
	* src/ViewManger.py: remove import_tool_callback
	* src/GrampsDb/_ReadGedcom.py: fix repeated translation call

2006-01-25  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Add proper upgrade path from
	within load.
	* src/GenericFilters.py (get_filters): Use default value of
	'generic' for the namespace argument; Remove unneeded import.
	* src/GrampsDb/_ConstXML.py: Add new file.
	* src/GrampsDb/Makefile.am: Ship new file.
	* src/GrampsDb/_GrampsBSDDB.py: Convert family and parent family
	relations from integer to tuple on upgrade.
	* src/GrampsDb/_WriteGedcom.py: Convert from tuple to string.
	* src/GrampsDb/_WriteXML.py: Handle some of new XML.
	
	* src/GrampsDb/_ConstXML.py: More XML export fixes.