@@ -1,3 +1,6 @@
+2006-01-28  Alex Roitman  <shura@gramps-project.org>
+	* src/GnomeMime.py: Import neede modules.
+
 2006-01-28  Don Allingham  <don@gramps-project.org>
 	* src/DisplayTabs.py: add SourceRefModel, NameEmbedList, 
 	AddrEmbedList
